@@ -29,7 +29,9 @@ reference_depth_to_1pt0km_per_sec = 40.0
 
 source_model_logic_tree_file = source_model_logic_tree.xml
 gsim_logic_tree_file = gmpe_logic_tree.xml
-reqv_hdf5 = ../case_2/lookup.hdf5
+
+[reqv]
+Active Shallow Crust = ../case_2/lookup_asc.hdf5
 
 investigation_time = 50.0
 intensity_measure_types_and_levels = {"PGA": [0.005, 0.007, 0.0098, 0.0137, 0.0192, 0.0269, 0.0376, 0.0527, 0.0738, 0.103, 0.145, 0.203, 0.284]}
